<resources>
    <string name="app_name">KotlinApp</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_others">Others</string>

    <string name="title_profile">Profile</string>

    <string name="text_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="notification_description">If you click this button, I will send you a notification sample.\nTry me!</string>
    <string name="searchUserInGithub">Search someone</string>
</resources>
