<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:context="com.example.kotlinapp.HomeFragment">
    <android.support.constraint.ConstraintLayout
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
                android:id="@+id/tabLayoutForHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabSelectedTextColor="?attr/colorAccent" >
            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_friday"/>

            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_saturday"/>

            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sunday"/>
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
                android:id="@+id/tabContent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayoutForHome">

        </android.support.v4.view.ViewPager>
    </android.support.constraint.ConstraintLayout>
</layout>
